5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4071/executions/1602_1016.log
== TEST (2019-03-24 17:39:21) 
-- CODE:
# primeira area do triangulo
a=float(input("digite um numero:"))
# segunda area do triangulo
b=float(input("digite um numero"))
# terceira area do triangulo
c=float(input("digite um numero"))
s=(a=b=c)/2
sqrt(math)

-- ERROR:
File "XXXX", line 7
    s=(a=b=c)/2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:39:50) 
-- CODE:
# primeira area do triangulo
a=float(input("digite um numero:"))
# segunda area do triangulo
b=float(input("digite um numero"))
# terceira area do triangulo
c=float(input("digite um numero"))
s=(a+b+c)/2
sqrt(math)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    sqrt(math)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:40:40) 
-- CODE:
# primeira area do triangulo
a=float(input("digite um numero:"))
# segunda area do triangulo
b=float(input("digite um numero"))
# terceira area do triangulo
c=float(input("digite um numero"))
s=(a+b+c)/2
sqrt(math)
print(round(x, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    sqrt(math)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:40:43) 
-- CODE:
# primeira area do triangulo
a=float(input("digite um numero:"))
# segunda area do triangulo
b=float(input("digite um numero"))
# terceira area do triangulo
c=float(input("digite um numero"))
s=(a+b+c)/2
sqrt(math)
print(round(x, 5))

-- EXECUTION TIME:
0.166293
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1016/main.py", line 8, in <module>
    sqrt(math)
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:42:57) 
-- CODE:
# primeira area do triangulo
a=float(input("digite um numero:"))
# segunda area do triangulo
b=float(input("digite um numero"))
# terceira area do triangulo
c=float(input("digite um numero"))
s=(a+b+c)/2
sqrt(math)
x= sqrt(s(s-a)*(s-b)*(s-c))
print(round(x, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    sqrt(math)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:43:07) 
-- CODE:
# primeira area do triangulo
a=float(input("digite um numero:"))
# segunda area do triangulo
b=float(input("digite um numero"))
# terceira area do triangulo
c=float(input("digite um numero"))
s=(a+b+c)/2
sqrt(math)
x= sqrt(s(s-a)*(s-b)*(s-c))
print(round(x, 5))

-- EXECUTION TIME:
0.164871
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1016/main.py", line 8, in <module>
    sqrt(math)
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:43:28) 
-- CODE:
# primeira area do triangulo
a=float(input("digite um numero:"))
# segunda area do triangulo
b=float(input("digite um numero"))
# terceira area do triangulo
c=float(input("digite um numero"))
s=(a+b+c)/2
from math import
x= sqrt(s(s-a)*(s-b)*(s-c))
print(round(x, 5))

-- ERROR:
File "XXXX", line 8
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:43:41) 
-- CODE:
# primeira area do triangulo
a=float(input("digite um numero:"))
# segunda area do triangulo
b=float(input("digite um numero"))
# terceira area do triangulo
c=float(input("digite um numero"))
s=(a+b+c)/2
from math import *
x= sqrt(s(s-a)*(s-b)*(s-c))
print(round(x, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x= sqrt(s(s-a)*(s-b)*(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:43:43) 
-- CODE:
# primeira area do triangulo
a=float(input("digite um numero:"))
# segunda area do triangulo
b=float(input("digite um numero"))
# terceira area do triangulo
c=float(input("digite um numero"))
s=(a+b+c)/2
from math import *
x= sqrt(s(s-a)*(s-b)*(s-c))
print(round(x, 5))

-- EXECUTION TIME:
0.181271
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1016/main.py", line 9, in <module>
    x= sqrt(s(s-a)*(s-b)*(s-c))
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:44:59) 
-- CODE:
# primeira area do triangulo
a=float(input("digite um numero:"))
# segunda area do triangulo
b=float(input("digite um numero:"))
# terceira area do triangulo
c=float(input("digite um numero:"))
s=(a+b+c)/2
from math import *
area= sqrt(s(s-a)*(s-b)*(s-c))
print(round(area, 5))

-- EXECUTION TIME:
0.203791
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1016/main.py", line 9, in <module>
    area= sqrt(s(s-a)*(s-b)*(s-c))
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:44:59) 
-- CODE:
# primeira area do triangulo
a=float(input("digite um numero:"))
# segunda area do triangulo
b=float(input("digite um numero:"))
# terceira area do triangulo
c=float(input("digite um numero:"))
s=(a+b+c)/2
from math import *
area= sqrt(s(s-a)*(s-b)*(s-c))
print(round(area, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    area= sqrt(s(s-a)*(s-b)*(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:45:25) 
-- CODE:
# primeira area do triangulo
a=float(input("digite um numero:"))
# segunda area do triangulo
b=float(input("digite um numero:"))
# terceira area do triangulo
c=float(input("digite um numero:"))
s=(a+b+c)/2
from math import *
area= sqrt(s(s-a)*(s-b)*(s-c))
print(round(area, 5))

-- EXECUTION TIME:
0.133202
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1016/main.py", line 9, in <module>
    area= sqrt(s(s-a)*(s-b)*(s-c))
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:45:59) 
-- CODE:
# primeira lado do triangulo
a=float(input("digite um numero:"))
# segunda lado do triangulo
b=float(input("digite um numero:"))
# terceira lado do triangulo
c=float(input("digite um numero:"))
s=(a+b+c)/2
from math import *
area= sqrt(s(s-a)*(s-b)*(s-c))
print(round(area, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    area= sqrt(s(s-a)*(s-b)*(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:46:21) 
-- CODE:
# primeira lado do triangulo
a=float(input("digite um numero:"))
# segunda lado do triangulo
b=float(input("digite um numero:"))
# terceira lado do triangulo
c=float(input("digite um numero:"))
s=(a+b+c)/2
from math import *
area= sqrt(s(s-a)*(s-b)*(s-c))
print(round(area, 5))

-- EXECUTION TIME:
0.141857
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1016/main.py", line 9, in <module>
    area= sqrt(s(s-a)*(s-b)*(s-c))
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:47:32) 
-- CODE:
# primeira lado do triangulo
a = float(input("digite um numero:"))
# segunda lado do triangulo
b = float(input("digite um numero:"))
# terceira lado do triangulo
c = float(input("digite um numero:"))
s = (a+b+c)/2
from math import *
area= sqrt(s(s-a)*(s-b)*(s-c))
print(round(area, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    area= sqrt(s(s-a)*(s-b)*(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:48:07) 
-- CODE:
# primeira lado do triangulo
a = float(input("digite um numero:"))
# segunda lado do triangulo
b = float(input("digite um numero:"))
# terceira lado do triangulo
c = float(input("digite um numero:"))
s = (a+b+c)/2
from math import *
area= sqrt(u(u-a)*(u-b)*(u-c))
print(round(area, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    area= sqrt(u(u-a)*(u-b)*(u-c))
NameError: name 'u' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:48:35) 
-- CODE:
# primeira lado do triangulo
a = float(input("digite um numero:"))
# segunda lado do triangulo
b = float(input("digite um numero:"))
# terceira lado do triangulo
c = float(input("digite um numero:"))
s = (a+b+c)/2
from math import *
area= sqrt(u*(u-a)*(u-b)*(u-c))
print(round(area, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    area= sqrt(u*(u-a)*(u-b)*(u-c))
NameError: name 'u' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:49:50) 
-- CODE:
# primeira lado do triangulo
a = float(input("digite um numero:"))
# segunda lado do triangulo
b = float(input("digite um numero:"))
# terceira lado do triangulo
c = float(input("digite um numero:"))
s = (a+b+c)/2
from math import *
area = sqrt(u * (u-a) * (u-b) * (u-c))
print(round(area, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    area = sqrt(u * (u-a) * (u-b) * (u-c))
NameError: name 'u' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:50:46) 
-- CODE:
# primeira lado do triangulo
a = float(input("digite um numero:"))
# segunda lado do triangulo
b = float(input("digite um numero:"))
# terceira lado do triangulo
c = float(input("digite um numero:"))
u = (a+b+c)/2
from math import *
area = sqrt(u*(u-a)*(u-b)*(u-c))
print(round(area, 5))

-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:50:55) 
-- CODE:
# primeira lado do triangulo
a = float(input("digite um numero:"))
# segunda lado do triangulo
b = float(input("digite um numero:"))
# terceira lado do triangulo
c = float(input("digite um numero:"))
u = (a+b+c)/2
from math import *
area = sqrt(u*(u-a)*(u-b)*(u-c))
print(round(area, 5))

-- EXECUTION TIME:
0.18675
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
